test/src/e2e_vm_tests/test_programs/should_pass/language/panic_expression/panicking_predicate/src/main.sw
// This test only shows that `panic` properly compiles in predicates.
// Testing for actual panicking is done in SDK harness tests.
predicate;

#[error_type]
enum ErrorEnum {
    #[error(m = "Error A.")]
    A: (),
}

fn main() -> bool {
    panic ErrorEnum::A;
}