test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args/src/error_type_attr.sw
library;

#[error_type]
enum Ok {
    #[error(m = "ok")]
    A: (),
}

#[error_type(invalid)] // Should be no invalid arg error or warning here.
enum NotOk {
    #[error(m = "ok")]
    A: (),
}
